--- a/css/materialize.css
+++ b/css/materialize.css
@@ -36,11 +36,11 @@
 }
 
 .materialize-red.lighten-2 {
-  background-color: #ee6e73 !important;
+  background-color: #2196F3 !important;
 }
 
 .materialize-red-text.text-lighten-2 {
-  color: #ee6e73 !important;
+  color: #2196F3 !important;
 }
 
 .materialize-red.lighten-1 {
@@ -2618,7 +2618,7 @@ a {
 blockquote {
   margin: 20px 0;
   padding-left: 1.5rem;
-  border-left: 5px solid #ee6e73;
+  border-left: 5px solid #2196F3;
 }
 
 i {
@@ -2678,7 +2678,7 @@ video.responsive-video {
 }
 
 .pagination li.active {
-  background-color: #ee6e73;
+  background-color: #2196F3;
 }
 
 .pagination li.disabled a {
@@ -2864,7 +2864,7 @@ ul.staggered-list li {
 
 .page-footer {
   padding-top: 20px;
-  background-color: #ee6e73;
+  background-color: #2196F3;
 }
 
 .page-footer .footer-copyright {
@@ -4184,7 +4184,7 @@ nav ul a span.badge {
 
 nav {
   color: #fff;
-  background-color: #ee6e73;
+  background-color: #2196F3;
   width: 100%;
   height: 56px;
   line-height: 56px;
@@ -5063,7 +5063,7 @@ small {
 }
 
 .tabs .tab a {
-  color: rgba(238, 110, 115, 0.7);
+  color: #2196F3;
   display: block;
   width: 100%;
   height: 100%;
@@ -5076,12 +5076,13 @@ small {
 
 .tabs .tab a:hover, .tabs .tab a.active {
   background-color: transparent;
-  color: #ee6e73;
+  color: #2196F3;
+  font-weight: 500;
 }
 
 .tabs .tab.disabled a,
 .tabs .tab.disabled a:hover {
-  color: rgba(238, 110, 115, 0.7);
+  color: #2196F3;
   cursor: default;
 }
 
@@ -5089,7 +5090,7 @@ small {
   position: absolute;
   bottom: 0;
   height: 2px;
-  background-color: #f6b2b5;
+  background-color: #2196F3;
   will-change: left, right;
 }
 
@@ -7167,13 +7168,13 @@ input[type=range]:focus::-ms-fill-upper {
 .table-of-contents a:hover {
   color: #a8a8a8;
   padding-left: 19px;
-  border-left: 1px solid #ee6e73;
+  border-left: 1px solid #2196F3;
 }
 
 .table-of-contents a.active {
   font-weight: 500;
   padding-left: 18px;
-  border-left: 2px solid #ee6e73;
+  border-left: 2px solid #2196F3;
 }
 
 .side-nav {
@@ -7371,7 +7372,7 @@ input[type=range]:focus::-ms-fill-upper {
 
 .side-nav .collapsible-body > ul:not(.collapsible) > li.active,
 .side-nav.fixed .collapsible-body > ul:not(.collapsible) > li.active {
-  background-color: #ee6e73;
+  background-color: #2196F3;
 }
 
 .side-nav .collapsible-body > ul:not(.collapsible) > li.active a,
@@ -8032,7 +8033,7 @@ input[type=range]:focus::-ms-fill-upper {
 
 .carousel.carousel-slider .carousel-item {
   width: 100%;
-  height: 100%;
+  height: auto;
   min-height: 400px;
   position: absolute;
   top: 0;
@@ -8051,8 +8052,8 @@ input[type=range]:focus::-ms-fill-upper {
 
 .carousel .carousel-item {
   display: none;
-  width: 200px;
-  height: 200px;
+  width: 100%;
+  height: auto;
   position: absolute;
   top: 0;
   left: 0;
@@ -8133,7 +8134,7 @@ input[type=range]:focus::-ms-fill-upper {
   position: absolute;
   font-size: 1rem;
   border-radius: 50%;
-  background-color: #ee6e73;
+  background-color: #2196F3;
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.14), 0 10px 50px 0 rgba(0, 0, 0, 0.12), 0 30px 10px -20px rgba(0, 0, 0, 0.2);
   width: 100%;
   height: 100%;
